tests/ui/reborrow/coerce-shared-omitted-reborrow-field-locked.stderr
error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-omitted-reborrow-field-locked.rs:19:5
   |
LL |     extra: ExtraMut<'a, T>,
   |     ---------------------- source field `extra` has type `ExtraMut<'a, T>`
...
LL |     value: &'a T,
   |     ^^^^^^^^^^^^ target field `value` has type `&'a T`

error[E0506]: cannot assign to `*wrapped.extra.value` because it is borrowed
  --> $DIR/coerce-shared-omitted-reborrow-field-locked.rs:49:5
   |
LL |     let shared = get(wrapped);
   |                      ------- `*wrapped.extra.value` is borrowed here
LL |
LL |     *wrapped.extra.value = 3;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `*wrapped.extra.value` is assigned to here but it was already borrowed
   |     borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0506`.
